# cpanel-site-checker

./: .gitignore  Gemfile  LICENCE.txt  README.md  TODO.txt  pyproject.toml  requirements.txt  servers.yml.sample  site-checker.py  site-checker.rb
cpanel_checker/: __init__.py  database.py  domain_validator.py  screenshot.py  site_checker.py  web_fetcher.py  whm_api.py
web_interface/: README.md  __init__.py  app.py  db_queries.py  requirements.txt
web_interface/static/: style.css
web_interface/templates/: index.html
